--- a/ui/webapp/manifest.json
+++ b/ui/webapp/manifest.json
@@ -126,5 +126,10 @@
                 }
             }
         }
+    },
+    "sap.platform.cf": {
+        "oAuthScopes": [
+            "$XSAPPNAME.admin"
+        ]
     }
 }
