--- a/purchaseorder-approuter/xs-app.json
+++ b/purchaseorder-approuter/xs-app.json
@@ -7,7 +7,33 @@
             "target": "$1",
             "destination": "srv-api",
             "authenticationType": "xsuaa",
-            "csrfProtection": false
+            "csrfProtection": false,
+            "scope": {
+                "GET": [
+                    "$XSAPPNAME.admin",
+                    "$XSAPPNAME.user"
+                ],
+                "PATCH": [
+                    "$XSAPPNAME.admin",
+                    "$XSAPPNAME.user"
+                ],
+                "POST": [
+                    "$XSAPPNAME.admin",
+                    "$XSAPPNAME.user"
+                ],
+                "PUT": [
+                    "$XSAPPNAME.admin",
+                    "$XSAPPNAME.user"
+                ],
+                "DELETE": [
+                    "$XSAPPNAME.admin",
+                    "$XSAPPNAME.user"
+                ],
+                "default": [
+                    "$XSAPPNAME.admin",
+                    "$XSAPPNAME.user"
+                ]
+            }
         }
     ]
 }
